[gd_scene load_steps=7 format=2]

[ext_resource path="res://DungeonCrawler/UI/Register/Register.gd" type="Script" id=1]
[ext_resource path="res://Assets/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/menu_button_press.png" type="Texture" id=2]
[ext_resource path="res://DungeonCrawler/UI/PageTemplate.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/Montserrat-ExtraBold_6.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Fonts/Montserrat-ExtraBold_8.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/menu_button.png" type="Texture" id=6]

[node name="Register" instance=ExtResource( 3 )]
script = ExtResource( 1 )

[node name="Label" parent="." index="3"]
text = "Register"

[node name="RegisterBox" type="VBoxContainer" parent="." index="5"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -40.0
margin_right = 88.5
margin_bottom = 35.5
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailBox" type="HBoxContainer" parent="RegisterBox" index="0"]
margin_right = 203.0
margin_bottom = 21.0

[node name="Label" type="Label" parent="RegisterBox/EmailBox" index="0"]
margin_top = 3.0
margin_right = 98.0
margin_bottom = 18.0
rect_min_size = Vector2( 98, 15 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.960784, 0.960784, 0.921569, 1 )
text = "Email: "
align = 2
valign = 1
uppercase = true

[node name="LineEdit" type="LineEdit" parent="RegisterBox/EmailBox" index="1"]
margin_left = 102.0
margin_right = 203.0
margin_bottom = 21.0
rect_min_size = Vector2( 75, 15 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )

[node name="PasswordBox" type="HBoxContainer" parent="RegisterBox" index="1"]
margin_top = 23.0
margin_right = 203.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="RegisterBox/PasswordBox" index="0"]
margin_top = 3.0
margin_right = 98.0
margin_bottom = 18.0
rect_min_size = Vector2( 98, 15 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.960784, 0.960784, 0.921569, 1 )
text = "Password:"
align = 2
valign = 1
uppercase = true

[node name="LineEdit" type="LineEdit" parent="RegisterBox/PasswordBox" index="1"]
margin_left = 102.0
margin_right = 203.0
margin_bottom = 21.0
rect_min_size = Vector2( 75, 21 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
secret = true

[node name="ConfirmPasswordBox" type="HBoxContainer" parent="RegisterBox" index="2"]
margin_top = 46.0
margin_right = 203.0
margin_bottom = 67.0

[node name="Label" type="Label" parent="RegisterBox/ConfirmPasswordBox" index="0"]
margin_top = 3.0
margin_right = 98.0
margin_bottom = 18.0
rect_min_size = Vector2( 98, 15 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.960784, 0.960784, 0.921569, 1 )
text = "Confirm Password:"
align = 2
valign = 1
uppercase = true

[node name="LineEdit" type="LineEdit" parent="RegisterBox/ConfirmPasswordBox" index="1"]
margin_left = 102.0
margin_right = 203.0
margin_bottom = 21.0
rect_min_size = Vector2( 75, 21 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
secret = true

[node name="ButtonContainer" type="HBoxContainer" parent="." index="6"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 30.0
margin_right = 40.0
margin_bottom = 47.0
rect_min_size = Vector2( 80, 20 )
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegisterButton" type="TextureButton" parent="ButtonContainer" index="0"]
margin_right = 80.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="ButtonContainer/RegisterButton" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 80, 20 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.137255, 0.137255, 0.121569, 1 )
text = "Submit	"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notification" type="Label" parent="." index="7"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -23.0
margin_right = 100.0
margin_bottom = -12.0
rect_min_size = Vector2( 200, 8 )
custom_fonts/font = ExtResource( 4 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="ButtonContainer/RegisterButton" to="." method="_on_RegisterButton_pressed"]
